Prevent description contents from overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -144,6 +144,7 @@ form > div:last-child {
   margin: 8px 0;
   border: 1px solid #000;
   resize: none;
+  overflow-wrap: break-word;
 }
 
 .task-description:focus {
